# P1-Projekt

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  README.md  RETNINGSLINJER.md  main.c  output.c  student.txt
datafiles/: education.txt  student.txt
include/: header.h  input.h  knn.h  output.h  struct.h  toolbox.h
src/: header.h  input.c  knn.c  main.c  output.c  struct.c  toolbox.c
testing/: runtests.c  test1.c  testManhattan  testManhattan.c  testeducations.txt
